--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,3 +1,5 @@
+<script src="./js/vendor.bundle.base.js"></script>
+
 <script type="text/javascript">
     function categoryClick(catID) {
         console.log(catID);
