--- a/views/partials/css.hbs
+++ b/views/partials/css.hbs
@@ -1,5 +1,7 @@
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-  type="text/css"
-/>
+<link rel="stylesheet" href="./css/feather/feather.css">
+<link rel="stylesheet" href="./css/ti-icons/css/themify-icons.css">
+<link rel="stylesheet" href="./css/style/style.css">
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
