--- a/public/login/scss/login.css
+++ b/public/login/scss/login.css
@@ -12,7 +12,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../img/Asset 2.png");
+  background-image: url("../img/Asset 9.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -48,6 +48,7 @@ body {
 }
 
 .input {
+  background: none;
   border: none;
   outline: none;
   margin-top: 1.5vh;
