--- a/public/login/scss/login.scss
+++ b/public/login/scss/login.scss
@@ -9,7 +9,7 @@ body{
     width: 100%;
     height: 100%;
 
-    background-image: url('../img/Asset\ 2.png');
+    background-image: url('../img/Asset\ 9.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -49,6 +49,7 @@ body{
 }
 
 .input{
+    background: none;
     border: none;
     outline: none;
     margin-top: 1.5vh;
