--- a/views/partials/css.hbs
+++ b/views/partials/css.hbs
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="./css/feather/feather.css">
 <link rel="stylesheet" href="./css/ti-icons/css/themify-icons.css">
+<link rel="stylesheet" href="./css/vendor.bundle.base.css">
 <link rel="stylesheet" href="./css/style/style.css">
+
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
