--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,4 +1,11 @@
 <script src="./js/vendor.bundle.base.js"></script>
+<script src="./js/Chart.min.js"></script>
+<script src="./js/off-canvas.js"></script>
+<script src="./js/hoverable-collapse.js"></script>
+<script src="./js/template.js"></script>
+<script src="./js/settings.js"></script>
+<script src="./js/todolist.js"></script>
+<script src="./js/chart.js"></script>
 
 <script type="text/javascript">
     function categoryClick(catID) {
