Update adminController, server

--- a/views/partials/css.hbs
+++ b/views/partials/css.hbs
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="./css/feather/feather.css">
-<link rel="stylesheet" href="./css/ti-icons/css/themify-icons.css">
-<link rel="stylesheet" href="./css/vendor.bundle.base.css">
-<link rel="stylesheet" href="./css/style/style.css">
+<link rel="stylesheet" href="/css/feather/feather.css">
+<link rel="stylesheet" href="/css/ti-icons/css/themify-icons.css">
+<link rel="stylesheet" href="/css/vendor.bundle.base.css">
+<link rel="stylesheet" href="/css/style/style.css">
 
 
 
