--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -21,11 +21,11 @@
         <button class="btn nav-link-btn active-btn"> Home</button>
       </li>
       <li class="nav-item">
-        <button class="btn ml-2 nav-link-btn non-active-btn" onclick="location.href='/user_list';"> User List</button>
+        <button class="btn ml-2 nav-link-btn non-active-btn" onclick="location.href='/admin/manage_user';"> User List</button>
       </li>
       {{else if isUserList}}
       <li class="nav-item">
-        <button class="btn nav-link-btn non-active-btn" onclick="location.href='/';"> Home</button>
+        <button class="btn nav-link-btn non-active-btn" onclick="location.href='/admin';"> Home</button>
       </li>
       <li class="nav-item">
         <button class="btn ml-2 nav-link-btn active-btn"> User List</button>
