Refactor login controller

--- a/views/login_views/login_id.hbs
+++ b/views/login_views/login_id.hbs
@@ -22,7 +22,7 @@
         <div class="welcome">
             Hey! </br> Welcome back
         </div>
-        <form class='inputtag' action="id" method="post">
+        <form class='inputtag' action="/login/id" method="post">
             <div>ID</div>
             <input class='input' type="text" name='id' required>
             <div class="line_bottom_id"></div>
