--- a/views/login_views/login_pw.hbs
+++ b/views/login_views/login_pw.hbs
@@ -23,7 +23,7 @@
         <div class="welcome">
             Hey! </br> Welcome back
         </div>
-        <form class='inputtag' action="password" method="post">
+        <form class='inputtag' action="/login/password" method="post">
             <input class='input' type="id" name='id' value="{{id}}" style="display: none;">
             <div>Passcode</div>
             <input class='input' type="password" name='password' required>
