--- a/views/login_views/login_createpw.hbs
+++ b/views/login_views/login_createpw.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name='viewport' content="width=device-width, initial-scale=1.0">
     <title>User Database </title>
-    <link rel="stylesheet" href="./scss/login.css">
+    <link rel="stylesheet" href="/login/scss/login.css">
     <link rel="shortcut icon" href="#">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
         <div class="welcome">
             Hey! </br> Welcome back
         </div>
-        <form class='inputtag' action="crpassword" method="post"
+        <form class='inputtag' action="/login/crpassword" method="post"
             oninput='confirm_password.setCustomValidity(create_password.value != confirm_password.value ? "Passcode không trùng khớp." : "")'>
             <input class='input' type="id" name='id' value="{{id}}" style="display: none;">
             <div>Passcode</div>
