--- a/public/css/login/scss/login.css
+++ b/public/css/login/scss/login.css
@@ -12,7 +12,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../img/Asset 9.png");
+  background-image: url("/img/Asset 9.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
