--- a/public/css/login/scss/login.scss
+++ b/public/css/login/scss/login.scss
@@ -9,7 +9,7 @@ body{
     width: 100%;
     height: 100%;
 
-    background-image: url('../img/Asset\ 9.png');
+    background-image: url('/img/Asset\ 9.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
