--- a/views/login_views/login_id.hbs
+++ b/views/login_views/login_id.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name='viewport' content="width=device-width, initial-scale=1.0">
     <title>User Database </title>
-    <link rel="stylesheet" href="/login/scss/login.css">
+    <link rel="stylesheet" href="/css/login/scss/login.css">
     <link rel="shortcut icon" href="#">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
