--- a/public/css/login/scss/login.css
+++ b/public/css/login/scss/login.css
@@ -100,6 +100,10 @@ body {
   text-decoration: none;
 }
 
+.hover-cursor:hover {
+  cursor: pointer;
+}
+
 #msg {
   -webkit-animation: cssAnimation 5s forwards;
   animation: cssAnimation 2s forwards;
