--- a/views/login_views/login_id.hbs
+++ b/views/login_views/login_id.hbs
@@ -26,7 +26,7 @@
             <div>ID</div>
             <input class='input' type="text" name='id' required>
             <div class="line_bottom_id"></div>
-            <button class='submit' type="submit">NEXT</button>
+            <button class='submit hover-cursor' type="submit">NEXT</button>
             {{>(msg)}}
         </form>
     </div>
