--- a/views/login_views/login_pw.hbs
+++ b/views/login_views/login_pw.hbs
@@ -28,7 +28,7 @@
             <div>Passcode</div>
             <input class='input' type="password" name='password' required>
             <div class="line_bottom_id"></div>
-            <button class='submit' type="submit">LOGIN</button>
+            <button class='submit hover-cursor' type="submit">LOGIN</button>
             {{!-- <a href="#" class="resetpassword">
                 <p>Forgot Passcode?</p>
             </a> --}}
