--- a/views/login_views/login_resetpw.hbs
+++ b/views/login_views/login_resetpw.hbs
@@ -34,7 +34,7 @@
             <div>Confirm Passcode</div>
             <input class='input' type="password" name='confirm_password' required>
             <div class="line_bottom_id"></div>
-            <button class='submit' type="submit">CHANGE PASSCODE</button>
+            <button class='submit hover-cursor' type="submit">CHANGE PASSCODE</button>
             {{>(msg)}}
         </form>
 
