--- a/views/login_views/login_createpw.hbs
+++ b/views/login_views/login_createpw.hbs
@@ -33,7 +33,7 @@
             <div>Confirm Passcode</div>
             <input class='input' type="password" name='confirm_password' required>
             <div class="line_bottom_id"></div>
-            <button class='submit' type="submit">SET PASSCODE</button>
+            <button class='submit hover-cursor' type="submit">SET PASSCODE</button>
         </form>
 
     </div>
