--- a/views/admin/manageUser.hbs
+++ b/views/admin/manageUser.hbs
@@ -17,13 +17,13 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Add User</h4>
-                            <form class="form-inline">
-                                <label class="sr-only" for="inlineFormInputName2">Name</label>
-                                <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
+                            <form class="form-inline" action="/account" method='post'>
+                                <label class="sr-only" for="addUser">Name</label>
+                                <input type="text" class="form-control mb-2 mr-sm-2" name="phone"
                                     placeholder="Phone number..."
                                     style="margin: 45px 45px; width: calc(100% - 90px); border: 1px solid #4B49AC">
+                                <button class="btn mt-2" id="btn-top-up" type="submit"> ADD</button>
                             </form>
-                            <button class="btn" id="btn-top-up" type="submit"> ADD</button>
                         </div>
                     </div>
                 </div>
@@ -59,9 +59,28 @@
                                                 <td class="font-weight-bold">{{this.phone}}</td>
                                                 <td>{{this.balance}}</td>
                                                 <td class="font-weight-medium">
-                                                    <div class="badge badge-danger hover-cursor"><i class="icon-trash mx-2"></i></div>
+                                                    <div class="badge badge-danger hover-cursor" data-toggle="modal" data-target="#{{this.username}}"><i class="icon-trash mx-2"></i></div>
                                                 </td>
                                             </tr>
+                                            <div class="modal fade" id="{{this.username}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Are you sure to delete user {{this.username}} ?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="{{this.username}}" onclick="onclickDelete(id)">Delete</button>
+                                                    </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         {{/each}}
                                     </tbody>
                                 </table>
