--- a/views/admin/adminHome.hbs
+++ b/views/admin/adminHome.hbs
@@ -34,8 +34,8 @@
                 <div class="col-md-6 mb-4 stretch-card transparent">
                   <div class="card card-tale">
                     <div class="card-body">
-                      <p class="mb-4">Today’s Transaction</p>
-                      <p class="fs-30 mb-2">4006</p>
+                      <p class="mb-4">Total Accounts</p>
+                      <p class="fs-30 mb-2">{{totalAccounts}}</p>
                       <p>10.00% (30 days)</p>
                     </div>
                   </div>
@@ -43,7 +43,7 @@
                 <div class="col-md-6 mb-4 stretch-card transparent">
                   <div class="card card-dark-blue">
                     <div class="card-body">
-                      <p class="mb-4">Total Transaction</p>
+                      <p class="mb-4">Total Transactions</p>
                       <p class="fs-30 mb-2">{{totalTransactions}}</p>
                       <p>22.00% (30 days)</p>
                     </div>
@@ -54,8 +54,8 @@
                 <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
                   <div class="card card-light-blue">
                     <div class="card-body">
-                      <p class="mb-4">Total Transaction</p>
-                      <p class="fs-30 mb-2">34040</p>
+                      <p class="mb-4">Total In Transaction</p>
+                      <p class="fs-30 mb-2">{{totalInTransactions}}</p>
                       <p>2.00% (30 days)</p>
                     </div>
                   </div>
@@ -63,8 +63,8 @@
                 <div class="col-md-6 stretch-card transparent">
                   <div class="card card-light-danger">
                     <div class="card-body">
-                      <p class="mb-4">Total Transaction</p>
-                      <p class="fs-30 mb-2">47033</p>
+                      <p class="mb-4">Total Out Transaction</p>
+                      <p class="fs-30 mb-2">{{totalOutTransactions}}</p>
                       <p>0.22% (30 days)</p>
                     </div>
                   </div>
